Fix overflow touch for mobile

--- a/packages/gosari/src/styles/highlight.css
+++ b/packages/gosari/src/styles/highlight.css
@@ -56,6 +56,7 @@ pre[class*="language-"] {
 padding: 1em;
 margin: .5em 0;
 overflow: auto;
+-webkit-overflow-scrolling: touch;
 }
 
 :not(pre) > code[class*="language-"],
@@ -141,6 +142,7 @@ cursor: help;
   background-color: var(--highlight-base5);
   padding: 1em;
   overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 .gatsby-highlight > pre {
